Fixed pgp overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,4 +71,5 @@ a:hover {
     width: 81%;
     background-color: #222831;
     border-radius: 15px;
+    word-wrap: break-word;
 }
